--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AvailableVehicleList"></activity>
+        <activity android:name=".OwnerVehicles"></activity>
+        <activity android:name=".AvailableVehicleList" />
         <activity android:name=".Signup" />
         <activity android:name=".MainActivity">
             <intent-filter>
