--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/rsz_1rsz_1truck"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OwnerVehicles"></activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCHwJkO-fozxWPa4lMP2sp4Ytwhv01KStM"/>
+
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".OwnerVehicles" />
         <activity android:name=".AvailableVehicleList" />
         <activity android:name=".Signup" />
         <activity android:name=".MainActivity">
@@ -35,6 +41,7 @@
         <activity android:name=".ManageDriver" />
         <activity android:name=".AddVehicle" />
         <activity android:name=".AddDriver" />
+        <activity android:name=".TripConfirmation" />
     </application>
 
 </manifest>
